--- a/index.html
+++ b/index.html
@@ -3,181 +3,185 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <script src="https://use.fontawesome.com/ebc807e221.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="styles.css" type="text/css" rel="stylesheet">
     <title>Much Doge</title>
   </head>
   <body>
-    <aside class="side-menu">
+    <aside class="aside-menu">
       <section class="profile-menu" id="side-menu-1">
         <img id="profile-pic" src="images/doge.jpg" alt="shiba inu dog image">
-        <select id="user-select" role="person drop-down menu"> 
-          <option value="value1">Newton Barley</option> 
-          <option value="value2" selected>Doge</option>
-          <option value="value3">Lord Business</option>
-        </select>
+        <h4 class="profile-name">Doge  <i class="fa fa-caret-down" aria-hidden="true"></i></h4>
       </section>
       <section class="side-menu" id="side-menu-2">
-        <p class="side-menu" id="main-side-menu">Main</p>
+        <h5 class="side-menu-h5" id="main-side-menu">Main</h5>
         <ul aria-labelledby="main-side-menu">
-          <li>home</li>
-          <li>jobs</li>
-          <li>resumes</li>
-          <li>tasks</li>
-          <li>calendar</li>
+          <li><i class="fa fa-briefcase" aria-hidden="true"></i>so</li>
+          <li><i class="fa fa-bug" aria-hidden="true"></i>very</li>
+          <li><i class="fa fa-certificate" aria-hidden="true"></i>such</li>
+          <li><i class="fa fa-cog" aria-hidden="true"></i>many</li>
+          <li><i class="fa fa-database" aria-hidden="true"></i>pancakes</li>
         </ul>
       </section>
       <section class="side-menu" id="side-menu-3">
-        <p class="side-menu" id="admin-side-menu">Admin</p>
+        <h5 class="side-menu-h5" id="admin-side-menu">Admin</h5>
         <ul aria-labelledby="admin-side-menu">
-          <li>users</li>
-          <li>locations</li>
-          <li>workflows</li>
-          <li>job boards</li>
-          <li>social</li>
+          <li><i class="fa fa-user-circle-o" aria-hidden="true"></i>users</li>
+          <li><i class="fa fa-heart-o" aria-hidden="true"></i>good boys</li>
+          <li><i class="fa fa-hand-paper-o" aria-hidden="true"></i>pats</li>
+          <li><i class="fa fa-id-badge" aria-hidden="true"></i> jobs</li>
+          <li><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i>woofs</li>
         </ul>
       </section>
       <section class="side-menu" id="side-menu-4">
-        <p class="side-menu" id="categories-side-menu">Categories</p>
-        <input type="checkbox" id="admin-checkbox"><label for="admin-checkbox">Administrative</label>
-        <input type="checkbox" id="design-checkbox"><label for="design-checkbox">Design</label>
-        <input type="checkbox" id="executive-checkbox"><label for="executive-checkbox">Executive</label>
-        <input type="checkbox" id="hr-checkbox"><label id="hr-checkbox">Human Resources</label>
+        <h5 class="side-menu-h5" id="categories-side-menu">Much Categories</h5>
+        <label for="admin-checkbox">
+          <i class="fa fa-check-square-o" aria-hidden="true"></i>
+          Boxes
+        </label>
+        <label for="design-checkbox">
+          <i class="fa fa-check-square-o" aria-hidden="true"></i>
+          Importants
+        </label>
+        <label for="executive-checkbox">
+          <i class="fa fa-check-square-o" aria-hidden="true"></i>
+          Very Check
+        </label>
+        <label id="hr-checkbox">
+          <i class="fa fa-check-square-o" aria-hidden="true"></i>
+          Hoomans
+        </label>
       </section>
     </aside>
-
-  <section id="main-wrapper"> 
-    <nav class="main-nav">
-      <form>
-        <button class="menu-btn"></button>
-        <input class="main-search" type="text">
-        <button class="add-person-btn"></button>
-        <button class="list-btn"></button>
-        <button class="network-btn"></button>
-      </form>
+  <nav class="top-nav">
+    <form class="main-nav">
+      <button class="top-nav-btn" id="hamburger-btn"></button>
+      <input class="main-search" type="text" placeholder="Search">
+      <button class="top-nav-btn" id="add-person-btn"></button>
+      <button class="top-nav-btn" id="list-btn"></button>
+      <button class="top-nav-btn" id="network-btn"></button>
+    </form>
+  </nav>
+  <header>
+    <div id="header-profile-div">
+      <div id="name-div">
+        <h1>Much Doge</h1>
+        <p class="location-p">Kyoto, Japan</p><span id="bullet">•</span>
+        <a href="#" class="preview-text">Preview this post</a>
+      </div>
+      <div id="profile-button-div">
+        <button class="rounded-btn" id="open-btn"></button>
+        <button class="rounded-btn" id="bookmark-btn"></button>
+        <button class="rounded-btn" id="edit-btn"></button>
+        <button class="rounded-btn" id="network-btn"></button>
+      </div>
+    </div>
+    <nav >
+      <ul id="tab-nav">
+        <li class="tab-li">summary</li>
+        <li class="tab-li">applicants</li>
+        <li class="tab-li">job board</li>
+        <li class="tab-li">interviews</li>
+        <li class="tab-li">activity</li>
+        <li class="tab-li">broadcast</li>
+        <li class="tab-li">notification</li>
+      </ul>
     </nav>
-
-    <header>
+  </header>
+  <main>
+    <section>
       <div>
-        <div>
-          <h1>Much Doge</h1>
-          <p class="location-p">Kyoto, Japan</p><span>•</span>
-          <a href="#" class="preview-text">Preview this post</a>
-        </div>
-        <div >
-          <button class="rounded-btn" id="open-btn"></button>
-          <button class="rounded-btn" id="bookmark-btn"></button>
-          <button class="rounded-btn" id="edit-btn"></button>
-          <button class="rounded-btn" id="network-btn"></button>
-        </div>
+        <span class="circle-span-1"></span>
+        <span class="circle-span-2"></span>
+        <span class="circle-span-3"></span>
+        <button class="rounded-btn" id="total-btn"></button>
       </div>
-      <nav>
-        <ul>
-          <li>summary</li>
-          <li>applicants</li>
-          <li>job board</li>
-          <li>interviews</li>
-          <li>activity</li>
-          <li>broadcast</li>
-          <li>notification</li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <div>
-          <span class="circle-span-1"></span>
-          <span class="circle-span-2"></span>
-          <span class="circle-span-3"></span>
-          <button class="rounded-btn" id="total-btn"></button>
-        </div>
-        <div>
-          <span class="circle-span-1">GRAPH IMAGE</span>
-          <button class="rounded-btn" id="applicants-btn"></button>
-        </div>
-      </section>
-
       <div>
-        <span class="paragraph-rule"></span>
-        <button class="rounded-btn" id="carrot-btn"></button>
-        <span class="paragraph-rule"></span>
+        <span class="circle-span-1">GRAPH IMAGE</span>
+        <button class="rounded-btn" id="applicants-btn"></button>
       </div>
+    </section>
 
-      <table>
-        <thead>
-          <tr>
-            <th>Job Description</th>
-            <th><button class="sq-button" id="table-edit-btn">Edit</button></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="small-caps">position title</td>
-            <td>Internet Meme</td>
-          </tr>
-          <tr>
-            <td class="small-caps">location</td>
-            <td>Kyoto, Japan</td>
-          </tr>
-          <tr>
-            <td class="small-caps">employment type</td>
-            <td>Extra full time parts</td>
-          </tr>
-          <tr>
-            <td class="small-caps">experience</td>
-            <td>Much muchness</td>
-          </tr>
-          <tr>
-            <td class="small-caps">status</td>
-            <td>Open</td>
-          </tr>
-          <tr>
-            <td class="small-caps">description</td>
-            <td>Dog bowl heel beagle roll over husky puppy, pomsky pit bull catch bring it. Shake dog peanut butter squeak toy sit rottweiler bark. Bark bulldog poodle beagle dog toy fetch dog toy bell bulldog.</td>
-          </tr>
-          <tr>
-            <td class="small-caps">hiring lead</td>
-            <td>Much Doge</td>
-          </tr>
-          <tr>
-            <td class="small-caps">approved salary</td>
-            <td>$1.6 million</td>
-          </tr>
-        </tbody>
-      </table>
-      
+    <div>
+      <span class="paragraph-rule"></span>
+      <button class="rounded-btn" id="carrot-btn"></button>
+      <span class="paragraph-rule"></span>
+    </div>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Job Description</th>
+          <th><button class="sq-button" id="table-edit-btn">Edit</button></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="small-caps">position title</td>
+          <td>Internet Meme</td>
+        </tr>
+        <tr>
+          <td class="small-caps">location</td>
+          <td>Kyoto, Japan</td>
+        </tr>
+        <tr>
+          <td class="small-caps">employment type</td>
+          <td>Extra full time parts</td>
+        </tr>
+        <tr>
+          <td class="small-caps">experience</td>
+          <td>Much muchness</td>
+        </tr>
+        <tr>
+          <td class="small-caps">status</td>
+          <td>Open</td>
+        </tr>
+        <tr>
+          <td class="small-caps">description</td>
+          <td>Dog bowl heel beagle roll over husky puppy, pomsky pit bull catch bring it. Shake dog peanut butter squeak toy sit rottweiler bark. Bark bulldog poodle beagle dog toy fetch dog toy bell bulldog.</td>
+        </tr>
+        <tr>
+          <td class="small-caps">hiring lead</td>
+          <td>Much Doge</td>
+        </tr>
+        <tr>
+          <td class="small-caps">approved salary</td>
+          <td>$1.6 million</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
       <article>
-        <div class="social-div">
-          <button class="sq-button" id="facebook-btn">Post to Facebook</button>
-          <button class="sq-button" id="tweet-btn">Tweet this Job</button>
-          <button class="sq-button" id="linkedin-btn">Post to Linkedin</button>
-        </div>
-        <div class="widget-div">
-          <h2></h2>
-          <p>Roll over great dance release spin jump catch leave it leave it lab.</p>
-          <span>
-            <p class="code-snip">http://frontend.turing.io/projects/m1-static-comp-3.html</p>
-            <button class="copy-button" id="permalink-btn">Copy</button>
-          </span>
-        </div>
-        <div class="widget-div">
-          <h2></h2>
-          <p>Catch bulldog tail kong, bite english mastiff tug bark dog toy leash.</p>
-          <span>
-            <p class="code-snip">&lt;script src="script.js" type="text/javascript"&gt;&lt;/script&gt;</p>
-            <button class="copy-button" id="script-btn">Copy</button>
-          </span>
-        </div>
-        <div class="widget-div">
-          <h2></h2>
-          <p>Come beagle kibbles poodle heel bark leave it stay maltese.</p>
-          <span>
-            <p class="code-snip">doge@awesome.com</p>
-          </span>
-        </div>
-      </article>
-
-    </main>
+      <div class="social-div">
+        <button class="sq-button" id="facebook-btn">Post to Facebook</button>
+        <button class="sq-button" id="tweet-btn">Tweet this Job</button>
+        <button class="sq-button" id="linkedin-btn">Post to Linkedin</button>
+      </div>
+      <div class="widget-div">
+        <h2></h2>
+        <p>Roll over great dance release spin jump catch leave it leave it lab.</p>
+        <span>
+          <p class="code-snip">http://frontend.turing.io/projects/m1-static-comp-3.html</p>
+          <button class="copy-button" id="permalink-btn">Copy</button>
+        </span>
+      </div>
+      <div class="widget-div">
+        <h2></h2>
+        <p>Catch bulldog tail kong, bite english mastiff tug bark dog toy leash.</p>
+        <span>
+          <p class="code-snip">&lt;script src="script.js" type="text/javascript"&gt;&lt;/script&gt;</p>
+          <button class="copy-button" id="script-btn">Copy</button>
+        </span>
+      </div>
+      <div class="widget-div">
+        <h2></h2>
+        <p>Come beagle kibbles poodle heel bark leave it stay maltese.</p>
+        <span>
+          <p class="code-snip">doge@awesome.com</p>
+        </span>
+      </div>
+    </article>
   </section> 
     <script src="script.js" type="text/javascript"></script>
   </body>
