--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <script src="https://use.fontawesome.com/ebc807e221.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="styles.css" type="text/css" rel="stylesheet">
-    <title>Much Doge</title>
+    <title>Doge Kabosu</title>
   </head>
   <body>
     <aside class="aside-menu">
       <section class="profile-menu" id="side-menu-1">
         <img id="profile-pic" src="images/doge.jpg" alt="shiba inu dog image">
-        <h4 class="profile-name">Doge  <i class="fa fa-caret-down" aria-hidden="true"></i></h4>
+        <h4 class="profile-name">Doge Kabosu <i class="fa fa-caret-down" aria-hidden="true"></i></h4>
       </section>
       <section class="side-menu" id="side-menu-2">
         <h5 class="side-menu-h5" id="main-side-menu">Main</h5>
@@ -53,106 +53,125 @@
         </label>
       </section>
     </aside>
-  <nav class="top-nav">
-    <form class="main-nav">
-      <button class="top-nav-btn" id="hamburger-btn"></button>
-      <input class="main-search" type="text" placeholder="Search">
-      <button class="top-nav-btn" id="add-person-btn"></button>
-      <button class="top-nav-btn" id="list-btn"></button>
-      <button class="top-nav-btn" id="network-btn"></button>
-    </form>
-  </nav>
-  <header>
-    <div id="header-profile-div">
-      <div id="name-div">
-        <h1>Much Doge</h1>
-        <p class="location-p">Kyoto, Japan</p><span id="bullet">•</span>
-        <a href="#" class="preview-text">Preview this post</a>
-      </div>
-      <div id="profile-button-div">
-        <button class="rounded-btn" id="open-btn"></button>
-        <button class="rounded-btn" id="bookmark-btn"></button>
-        <button class="rounded-btn" id="edit-btn"></button>
-        <button class="rounded-btn" id="network-btn"></button>
-      </div>
-    </div>
-    <nav >
-      <ul id="tab-nav">
-        <li class="tab-li">summary</li>
-        <li class="tab-li">applicants</li>
-        <li class="tab-li">job board</li>
-        <li class="tab-li">interviews</li>
-        <li class="tab-li">activity</li>
-        <li class="tab-li">broadcast</li>
-        <li class="tab-li">notification</li>
-      </ul>
+
+    <nav class="top-nav">
+      <form class="main-nav">
+        <button class="top-nav-btn" id="hamburger-btn">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </button>
+        <div id="main-search-div">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          <input class="main-search" type="text" placeholder="Search for a wow, derp or boop"> 
+        </div>
+        <button class="top-nav-btn" id="add-person-btn">
+          <i class="fa fa-user-plus" aria-hidden="true"></i>
+        </button>
+        <button class="top-nav-btn" id="list-btn">
+          <i class="fa fa-list" aria-hidden="true"></i>
+        </button>
+        <button class="top-nav-btn" id="network-btn">
+          <i class="fa fa-th" aria-hidden="true"></i>
+        </button>
+      </form>
     </nav>
-  </header>
-  <main>
-    <section>
-      <div>
-        <span class="circle-span-1"></span>
-        <span class="circle-span-2"></span>
-        <span class="circle-span-3"></span>
-        <button class="rounded-btn" id="total-btn"></button>
+
+    <header>
+      <div id="header-profile-div">
+        <div id="name-div">
+          <h1>Doge Kabosu</h1>
+          <p class="location-p">Kyoto, Japan</p><span id="bullet">•</span>
+          <a href="#" class="preview-text">Preview this post</a>
+        </div>
+        <div id="profile-button-div">
+          <button class="rounded-btn" id="open-btn">Open</button>
+          <button class="rounded-btn" id="bookmark-btn">
+            <i class="fa fa-bookmark" aria-hidden="true"></i>
+          </button>
+          <button class="rounded-btn" id="edit-btn">
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+          </button>
+          <button class="rounded-btn" id="network-btn">
+            <i class="fa fa-university" aria-hidden="true"></i>
+          </button>
+        </div>
       </div>
+      <nav >
+        <ul id="tab-nav">
+          <li class="tab-li">summary</li>
+          <li class="tab-li">applicants</li>
+          <li class="tab-li">job board</li>
+          <li class="tab-li">interviews</li>
+          <li class="tab-li">activity</li>
+          <li class="tab-li">broadcast</li>
+          <li class="tab-li">notification</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div>
+          <span class="circle-span-1"></span>
+          <span class="circle-span-2"></span>
+          <span class="circle-span-3"></span>
+          <button class="rounded-btn" id="total-btn"></button>
+        </div>
+        <div>
+          <span class="circle-span-1">GRAPH IMAGE</span>
+          <button class="rounded-btn" id="applicants-btn"></button>
+        </div>
+      </section>
+
       <div>
-        <span class="circle-span-1">GRAPH IMAGE</span>
-        <button class="rounded-btn" id="applicants-btn"></button>
+        <span class="paragraph-rule"></span>
+        <button class="rounded-btn" id="carrot-btn"></button>
+        <span class="paragraph-rule"></span>
       </div>
-    </section>
 
-    <div>
-      <span class="paragraph-rule"></span>
-      <button class="rounded-btn" id="carrot-btn"></button>
-      <span class="paragraph-rule"></span>
-    </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Job Description</th>
+            <th><button class="sq-button" id="table-edit-btn">Edit</button></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="small-caps">position title</td>
+            <td>Internet Meme</td>
+          </tr>
+          <tr>
+            <td class="small-caps">location</td>
+            <td>Kyoto, Japan</td>
+          </tr>
+          <tr>
+            <td class="small-caps">employment type</td>
+            <td>Extra full time parts</td>
+          </tr>
+          <tr>
+            <td class="small-caps">experience</td>
+            <td>Much muchness</td>
+          </tr>
+          <tr>
+            <td class="small-caps">status</td>
+            <td>Open</td>
+          </tr>
+          <tr>
+            <td class="small-caps">description</td>
+            <td>Dog bowl heel beagle roll over husky puppy, pomsky pit bull catch bring it. Shake dog peanut butter squeak toy sit rottweiler bark. Bark bulldog poodle beagle dog toy fetch dog toy bell bulldog.</td>
+          </tr>
+          <tr>
+            <td class="small-caps">hiring lead</td>
+            <td>Much Doge</td>
+          </tr>
+          <tr>
+            <td class="small-caps">approved salary</td>
+            <td>$1.6 million</td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Job Description</th>
-          <th><button class="sq-button" id="table-edit-btn">Edit</button></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="small-caps">position title</td>
-          <td>Internet Meme</td>
-        </tr>
-        <tr>
-          <td class="small-caps">location</td>
-          <td>Kyoto, Japan</td>
-        </tr>
-        <tr>
-          <td class="small-caps">employment type</td>
-          <td>Extra full time parts</td>
-        </tr>
-        <tr>
-          <td class="small-caps">experience</td>
-          <td>Much muchness</td>
-        </tr>
-        <tr>
-          <td class="small-caps">status</td>
-          <td>Open</td>
-        </tr>
-        <tr>
-          <td class="small-caps">description</td>
-          <td>Dog bowl heel beagle roll over husky puppy, pomsky pit bull catch bring it. Shake dog peanut butter squeak toy sit rottweiler bark. Bark bulldog poodle beagle dog toy fetch dog toy bell bulldog.</td>
-        </tr>
-        <tr>
-          <td class="small-caps">hiring lead</td>
-          <td>Much Doge</td>
-        </tr>
-        <tr>
-          <td class="small-caps">approved salary</td>
-          <td>$1.6 million</td>
-        </tr>
-      </tbody>
-    </table>
-  </main>
-
-      <article>
+    <article>
       <div class="social-div">
         <button class="sq-button" id="facebook-btn">Post to Facebook</button>
         <button class="sq-button" id="tweet-btn">Tweet this Job</button>
@@ -183,6 +202,7 @@
       </div>
     </article>
   </section> 
+
     <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
