Add circle div graphics bar chart and structure to chart section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <header>
       <div id="header-profile-div">
         <div id="name-div">
-          <h1>Doge Kabosu</h1>
+          <h1>Internet Meme</h1>
           <p class="location-p">Kyoto, Japan</p><span id="bullet">•</span>
           <a href="#" class="preview-text">Preview this post</a>
         </div>
@@ -106,26 +106,43 @@
           <li class="tab-li">notification</li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <section>
-        <div>
-          <span class="circle-span-1"></span>
-          <span class="circle-span-2"></span>
-          <span class="circle-span-3"></span>
-          <button class="rounded-btn" id="total-btn"></button>
+   
+
+   
+      <article class="charts-article">
+      <section class="pie-section">
+        <div class="circle-div">
+          <div class="pie-div" id="pd-1">3,154
+            <span class="small-font-span">derps</span>
+          </div>
+            
+          <div class="pie-div" id="pd-2">1,546
+            <span class="small-font-span">boops</span>
+          </div>
+
+          <div class="pie-div" id="pd-3">912
+            <span class="small-font-span">much</span>
+          </div>
         </div>
         <div>
-          <span class="circle-span-1">GRAPH IMAGE</span>
-          <button class="rounded-btn" id="applicants-btn"></button>
+          <button class="rounded-btn" id="total-btn">Totals: Out of 4,321 views</button>
         </div>
       </section>
-
-      <div>
+      <section class="bar-chart-section">
+        <div>
+          <img class="graph-image" src="images/BarChartExample.gif" alt="bar chart image">
+          <button class="rounded-btn" id="applicants-btn">Applicants Per Day</button>
+        </div>
+      </section>
+      </article>
+            <div class="paragraph-rule-holder">
         <span class="paragraph-rule"></span>
         <button class="rounded-btn" id="carrot-btn"></button>
         <span class="paragraph-rule"></span>
       </div>
+       </header>
+       <main>
+
 
       <table>
         <thead>
