Finish article styling and move on to mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <aside class="aside-menu">
       <section class="profile-menu" id="side-menu-1">
         <img id="profile-pic" src="images/doge.jpg" alt="shiba inu dog image">
-        <h4 class="profile-name">Doge Kabosu <i class="fa fa-caret-down" aria-hidden="true"></i></h4>
+        <h2 class="profile-name">Doge Kabosu <i class="fa fa-caret-down" aria-hidden="true"></i></h2>
       </section>
       <section class="side-menu" id="side-menu-2">
         <h5 class="side-menu-h5" id="main-side-menu">Main</h5>
@@ -61,7 +61,7 @@
         </button>
         <div id="main-search-div">
           <i class="fa fa-search" aria-hidden="true"></i>
-          <input class="main-search" type="text" placeholder="Search for a wow, derp or boop" aria-label="Search Bar"> 
+          <input class="main-search" type="text" placeholder="Search" aria-label="Search Bar"> 
         </div>
         <button class="top-nav-btn" id="add-person-btn" aria-label="Add Contact">
           <i class="fa fa-user-plus" aria-hidden="true"></i>
@@ -69,7 +69,7 @@
         <button class="top-nav-btn" id="list-btn" aria-label="List Contacts">
           <i class="fa fa-list" aria-hidden="true"></i>
         </button>
-        <button class="top-nav-btn" id="network-btn" aria-label="Show Network">
+        <button class="top-nav-btn" id="institution-btn" aria-label="Show Institution">
           <i class="fa fa-th" aria-hidden="true"></i>
         </button>
       </form>
@@ -207,24 +207,30 @@
           <i class="fa fa-globe" aria-hidden="true"></i>
           Link to this job
         </h3>
-        <p>Roll over great dance release spin jump catch leave it leave it lab.</p>
-        <span>
-          <p class="code-snip">http://frontend.turing.io/projects/m1-static-comp-3.html</p>
-          <button class="copy-button" id="permalink-btn">Copy</button>
+        <p class="social-p">Roll over great dance release spin jump catch leave it leave it lab.</p>
+        <span class="code-span">
+          <p class="code-snip">http:||frontend.turing.io</p>
+          <button class="copy-button sq-button" id="permalink-btn">Copy</button>
         </span>
       </div>
       <div class="widget-div" id="button-widget-div">
-        <h3>Use the button widget</h3>
-        <p>Catch bulldog tail kong, bite english mastiff tug bark dog toy leash.</p>
-        <span>
-          <p class="code-snip">&lt;script src="script.js" type="text/javascript"&gt;&lt;/script&gt;</p>
-          <button class="copy-button" id="script-btn">Copy</button>
+        <h3>
+          <i class="fa fa-hand-o-up" aria-hidden="true"></i>
+          Use the button widget
+        </h3>
+        <p class="social-p">Catch bulldog tail kong, bite english mastiff tug bark dog toy leash.</p>
+        <span class="code-span">
+          <p class="code-snip">&lt;script src="script.js" type=</p>
+          <button class="copy-button sq-button" id="script-btn">Copy</button>
         </span>
       </div>
       <div class="widget-div">
-        <h3>Upload resumes by email</h3>
-        <p>Come beagle kibbles poodle heel bark leave it stay maltese.</p>
-        <span>
+        <h3>
+          <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          Upload resumes by email
+        </h3>
+        <p class="social-p">Come beagle kibbles poodle heel bark leave it stay maltese.</p>
+        <span class="code-span">
           <p class="code-snip">doge@awesome.com</p>
         </span>
       </div>
